# unizar_nav_stack

./: .gitignore  .rosinstall  README.md
data_recording/: CMakeLists.txt  package.xml
data_recording/launch/: record_gt_and_ICP.launch
data_recording/src/: trajectory_recorder.cpp
hector_models/hector_sensors_description/urdf/: kinect_camera.urdf.xacro
hector_moveit_actions/: CMakeLists.txt  package.xml
hector_moveit_actions/config/: trajectory_executer_voxmap.yaml  tyrion_trajectory_executer_config.yaml
hector_moveit_actions/src/: trajectory_executer_dwa.cpp  trajectory_executer_dwa_voxmap.cpp  tyrion_trayectory_executer_dwa.cpp  velocity_command.cpp
optitrack_arena/launch/: CineMPC_optitrack.launch  tyrion_gt_optitrack.launch
optitrack_arena/src/: optitrack_pose_tf.cpp
px4_sim/offb_sim/: CMakeLists.txt  package.xml
px4_sim/offb_sim/launch/: start.launch
px4_sim/offb_sim/src/: offb_node.cpp  p_controller_test.cpp  vision_topic_handler.cpp
px4_test/: CMakeLists.txt  package.xml
px4_test/src/: Juan_offboard_lightpaining_house.cpp  check_connection.cpp  offboard_position_example.cpp  offboard_velocity_example.cpp  offboard_velocity_example_org.cpp
sandbox/: CMakeLists.txt  package.xml
sandbox/src/: sandbox.cpp
tracking_cam/: CMakeLists.txt  package.xml
tracking_cam/launch/: read_t265_w_cinempc.launch  rviz_and_paths.launch
tracking_cam/src/: move_cam_to_cinempc.cpp
traj_generation/: CMakeLists.txt  package.xml
traj_generation/cnfg/: cnfg.rviz  cnfg_no_vxblx_sim_debugging_px4.rviz  cnfg_real_drone_flying_ocho.rviz  t265_cam_and_paths.rviz  t265_cam_for_localization.rviz  with_vxblx.rviz
traj_generation/include/: traj_gen_real_drone.h  traj_gen_sim.h
traj_generation/launch/: drone_connection.launch  mavros_posix_sitl.launch  mavros_posix_sitl_rviz.launch  pid_cntrl.launch  real_poly_traj_plan.launch  sim_enviroment.launch  sim_poly_traj_plan.launch  vxblx_start.launch
traj_generation/meshes/: cinempc.urdf
traj_generation/meshes/cineMPC/: cinempc.urdf
traj_generation/src/: drone_connection.cpp  drone_race.cpp  pose_p_controller.cpp  sandbox.cpp  traj_gen_real_drone.cpp  traj_gen_sim.cpp  vel_pub_2_real_drone.cpp
